# univ3-substreams

./: Cargo.toml  README.md  build.rs  package.json  schema.graphql  substreams.yaml
proto/: example.proto
src/: lib.rs
src/abi/: SwapContract.rs  mod.rs
