[package]
name = "substreams-ethereum-quickstart"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-ethereum = "0.9.5"
substreams-entity-change = "1.3"
prost = "0.11"
prost-types = "0.11"
base64 = "0.13"
hex-literal = "0.4.1"
anyhow = "1.0.75"
ethabi = "18.0.0"
num-bigint = "0.4.4"
lazy_static = "1.4.0"
hex = "0.4.3"

[build-dependencies]
anyhow = "1.0.75"
substreams-ethereum = "0.9.5"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
